opa_&_gatekeeper.yml
`Open Policy Agent (OPA): A policy engine used to enforce rules.
Gatekeeper: A Kubernetes admission controller built on OPA.
Together, they let you block unsafe configurations before they get deployed.

ConstraintTemplate → rule definition ( How to apply )
Constraint → rule applied ( WHERE to apply )

# create kind cluster
# install gatekeeper
kubectl get pods -n gatekeeper-system

---- “We just added a security layer to Kubernetes”

# Deploy NORMAL app
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: nginx
    image: nginx


# Add POLICY
--- Rule: “No root containers allowed”

# ConstraintTemplate -- HOW to check
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdenyrunroot
spec:
  crd:
    spec:
      names:
        kind: K8sDenyRunRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyrunroot

        violation[{"msg": msg}] {
          input.review.object.spec.containers[_].securityContext.runAsUser == 0
          msg := "Running as root is not allowed"
        }

-- kubectl get constrainttemplate

# Constraint -- Rule Applied - Where to check
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyRunRoot
metadata:
  name: deny-root
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]

-- kubectl get constraints

# removes Kubernetes built-in restriction (PSA)
kubectl label namespace default pod-security.kubernetes.io/enforce=privileged --overwrite



# Create pod with non root access
kubectl get pod <pod-name> -o yaml > pod.yaml


# OR Change Template
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: nginx
    image: nginx
    # non root config
    securityContext:
      runAsUser: 1000

####################################################
“No latest tag” policy

# Template
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdenylatesttag
spec:
  crd:
    spec:
      names:
        kind: K8sDenyLatestTag
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenylatesttag

        violation[{"msg": msg}] {
          image := input.review.object.spec.containers[_].image
          endswith(image, ":latest")
          msg := sprintf("Image %v uses latest tag which is not allowed", [image])
        }

# Constraint
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyLatestTag
metadata:
  name: deny-latest
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]

###############################################################
No Resource Limits

# Template
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredresourcelimits
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredResourceLimits
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredresourcelimits

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.resources
          msg := sprintf("Container %v must define resources", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.resources
          not container.resources.limits
          msg := sprintf("Container %v must define limits", [container.name])
        }
        
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.resources.limits.cpu
          msg := sprintf("Container %v must have CPU limits set", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.resources.limits.memory
          msg := sprintf("Container %v must have memory limits set", [container.name])
        }

# constraint
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResourceLimits
metadata:
  name: require-resource-limits
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
